# simutrador-docs

./: .gitignore  README.md  STATUS.md  docs.yml  mkdocs.yml  pyproject.toml  simutrade_ws_models_sample.py
.github/workflows/: docs.yml
.obsidian/: workspace.json
SimuTrador/: main.md  ohlcv_manager.md  repository-migration-plan.md  simulation-engine-implementation-plan.md  task-3-websocket-auth-implementation-plan.md  task-4-session-management-implementation-plan.md
SimuTrador/simutrador-data-manager/API/: data analysis.md  nightly update.md
SimuTrador/simutrador-server/: ws_api_v2.md
docs/: .pages  .pages.yml  index.md
docs/data-manager/: .pages  .pages.yml
docs/data-manager/docs/: .pages.yml
scripts/workspace/: README.md  update_workspace.sh
